--- a/styles.css
+++ b/styles.css
@@ -10,3 +10,23 @@ h1 {
   color: orange;
   font-size: 30px;
 }
+
+#special {
+  color: red;
+  font-family: "Comic Sans";
+}
+
+.big-text {
+  color: black;
+  font-size: 70px;
+}
+
+.content-container {
+  border: 5px solid green;
+  padding: 40px;
+  margin-bottom: 10px;
+}
+* {
+  margin: 0;
+  padding: 0;
+}
